--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "expo": "~37.0.3",
+    "expo-font": "~8.1.0",
+    "moment": "^2.25.1",
+    "native-base": "^2.13.12",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
@@ -19,8 +22,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
+    "@types/moment": "^2.13.0",
     "@types/react": "~16.9.23",
     "@types/react-native": "~0.61.17",
+    "@types/styled-components": "^5.1.0",
     "@typescript-eslint/eslint-plugin": "2.x",
     "@typescript-eslint/parser": "2.x",
     "babel-eslint": "10.x",
@@ -34,7 +39,9 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "7.x",
     "eslint-plugin-react-hooks": "2.x",
+    "expo-cli": "^3.20.1",
     "prettier": "^2.0.5",
+    "styled-components": "^5.1.0",
     "typescript": "~3.8.3"
   },
   "private": true
